--- a/app/src/main/res/layout/row_employee.xml
+++ b/app/src/main/res/layout/row_employee.xml
@@ -16,10 +16,25 @@
         android:padding="5dp">
 
         <!-- TextView Employee Name -->
-        <TextView
-            android:id="@+id/txt_employee_name"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txt_employee_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"/>
+            <Button
+                android:id="@+id/btn_listAllMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lihat Semua"
+                android:background="@null"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
 
         <!-- TextView Employee Email -->
         <TextView
@@ -28,10 +43,16 @@
             android:layout_height="wrap_content" />
 
         <!-- TextView Employee Phone -->
-        <TextView
-            android:id="@+id/txt_employee_phone"
+        <GridView
+            android:id="@+id/GridViewMenu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:numColumns="3"
+            android:layout_height="wrap_content"
+            android:columnWidth="100dp"
+            android:paddingVertical="10dp"
+            android:scrollbars="none"
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"/>
 
     </LinearLayout>
 
