add details on the merchant and partner also add splash screen

--- a/app/src/main/res/layout/activity_excite_partner_master.xml
+++ b/app/src/main/res/layout/activity_excite_partner_master.xml
@@ -39,36 +39,35 @@
         android:id="@+id/layout_address"
         android:layout_width="match_parent"
         android:layout_height="50dp">
-        <ImageView
-            android:id="@+id/image_pin"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:src="@drawable/ic_001_pin"
+            android:text="125.000"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentRight="true"/>
         <TextView
             android:id="@+id/txt_merchantName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/image_pin"
-            android:layout_alignParentRight="true"
-            android:text="Domino's Pizza Menteng"
+            android:layout_toLeftOf="@+id/image_pin"
+            android:layout_alignParentLeft="true"
+            android:text="Open App"
             android:layout_alignParentTop="true"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
             android:layout_toRightOf="@+id/image_pin"
-            android:text="Jalan KH. Wasyid Hasyim no 99 Menteng \nCentral Jakarta" />
+            android:text="App Name" />
     </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
-        app:tabTextAppearance="@style/MyNotCapitalTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabTextAppearance="@style/MyNotCapitalTabLayout"
         app:tabMode="fixed"
         app:tabGravity="fill"/>
 
