--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,4 +12,8 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="SplashTheme" parent="MyMaterialTheme.Base">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
 </resources>
