--- a/app/src/main/res/layout/fragment_offering.xml
+++ b/app/src/main/res/layout/fragment_offering.xml
@@ -5,9 +5,10 @@
     tools:context="com.example.lenovo.myapplication.Activities.MerchantDetails.Fragment_Offerings">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
+    <ListView
+        android:id="@+id/recipe_list_view"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="match_parent">
+    </ListView>
 
 </FrameLayout>
