--- a/excitemobilesdk/src/main/res/layout/linearlayout_gridviewmenu.xml
+++ b/excitemobilesdk/src/main/res/layout/linearlayout_gridviewmenu.xml
@@ -17,18 +17,12 @@
             android:id="@+id/imageview_cover_art"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"/>
-
-        <ImageView
-            android:id="@+id/imageview_favorite"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="bottom|right"/>
+            android:scaleType="centerInside"/>
 
     </FrameLayout>
 
     <TextView
-        android:id="@+id/textview_book_name"
+        android:id="@+id/txt_gridviewmenu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
@@ -39,7 +33,7 @@
         android:gravity="center_horizontal"/>
 
     <TextView
-        android:id="@+id/textview_book_author"
+        android:id="@+id/txt_gridviewmenu_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
