--- a/app/src/main/res/layout/listview_adapter_earnpoint.xml
+++ b/app/src/main/res/layout/listview_adapter_earnpoint.xml
@@ -5,13 +5,13 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
-        android:contentDescription="TODO"
-        android:src="@drawable/ic_099_wallet" />
+        android:layout_alignParentLeft="true"
+        android:contentDescription="TODO"/>
 
     <TextView
         android:id="@+id/secondLine"
