--- a/app/src/main/res/layout/activity_merchant_details.xml
+++ b/app/src/main/res/layout/activity_merchant_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.lenovo.myapplication.Activities.MerchantDetails.MerchantDetails">
+    tools:context="com.example.lenovo.myapplication.com.example.lenovo.shop.Activities.MerchantDetails.MerchantDetails">
 
     <RelativeLayout
         android:layout_width="match_parent"
