--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.lenovo.myapplication.Activities.Profile.ProfileActivity"
+    tools:context="com.example.lenovo.myapplication.com.example.lenovo.shop.Activities.Profile.ProfileActivity"
     tools:showIn="@layout/activity_profile">
 
     <com.facebook.login.widget.LoginButton
