--- a/app/src/main/res/layout/fragment_excite_partner_description.xml
+++ b/app/src/main/res/layout/fragment_excite_partner_description.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lenovo.myapplication.Activities.ExcitePartner.ExcitePartnerDescription">
+    tools:context="com.example.lenovo.myapplication.com.example.lenovo.shop.Activities.ExcitePartner.ExcitePartnerDescription">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
