--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/windowBackground"
-    tools:context=".Activities.Home.Activity_Home">
+    tools:context="com.example.lenovo.shop.Activities.Home.Activity_Home">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
