--- a/app/src/main/res/layout/fragment_offering.xml
+++ b/app/src/main/res/layout/fragment_offering.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lenovo.myapplication.Activities.MerchantDetails.Fragment_Offerings">
+    tools:context="com.example.lenovo.myapplication.com.example.lenovo.shop.Activities.MerchantDetails.Fragment_Offerings">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
