--- a/app/src/main/res/layout/fragment_redeem_details_home.xml
+++ b/app/src/main/res/layout/fragment_redeem_details_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.lenovo.myapplication.Activities.EarnPointDetails.ListEarnPointsMenu">
+    tools:context="com.example.lenovo.myapplication.com.example.lenovo.shop.Activities.EarnPointDetails.ListEarnPointsMenu">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
