--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Home.Activity_Home">
+    tools:context="com.example.lenovo.shop.Activities.Home.Activity_Home">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
