--- a/app/src/main/res/layout/listview_adapter_earnpoint.xml
+++ b/app/src/main/res/layout/listview_adapter_earnpoint.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/listview_adapter_layout"
     android:layout_width="fill_parent"
     android:layout_height="80dp"
     android:padding="6dip" >
@@ -48,6 +49,7 @@
         android:layout_toRightOf="@id/icon"
         android:gravity="center_vertical"
         android:text="Example application"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
