--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#125688</color>
-    <color name="colorPrimaryDark">#125688</color>
+    <color name="colorPrimary">#cf1b1b</color>
+    <color name="colorPrimaryDark">#cf1b1b</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="gridColorBackground">#FFFFFF</color>
     <color name="windowBackground">#e6e8ed</color>
