--- a/app/src/main/res/layout/activity_list_earn_points_menu.xml
+++ b/app/src/main/res/layout/activity_list_earn_points_menu.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <Button
+                    android:id="@+id/btn_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -44,6 +45,7 @@
                         android:id="@+id/toolbar_title" />
                 </LinearLayout>
                 <Button
+                    android:id="@+id/btn_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
