--- a/app/src/main/res/layout/activity_merchant_details.xml
+++ b/app/src/main/res/layout/activity_merchant_details.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true">
             <Button
+                android:id="@+id/btn_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -42,10 +43,10 @@
             android:id="@+id/image_pin"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:src="@drawable/ic_001_pin"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentLeft="true"
+            app:srcCompat="@drawable/ic_001_pin"/>
         <TextView
             android:id="@+id/txt_merchantName"
             android:layout_width="fill_parent"
