--- a/app/src/main/res/layout/listview_adapter_earnpoint.xml
+++ b/app/src/main/res/layout/listview_adapter_earnpoint.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/secondLine"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="26dip"
         android:layout_below="@id/firstLine"
         android:layout_above="@id/txt_distances"
@@ -51,5 +51,23 @@
         android:text="Example application"
         android:textSize="16sp"
         android:textStyle="bold"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FEBGAJIAN"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Shop Now"/>
+    </LinearLayout>
 
 </RelativeLayout>
