Improve the App flow between each menu.

--- a/app/src/main/res/layout/activity__info_detail.xml
+++ b/app/src/main/res/layout/activity__info_detail.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <Button
+                    android:id="@+id/btn_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -41,12 +42,6 @@
                         android:textColor="@color/textColorPrimary"
                         android:id="@+id/toolbar_title" />
                 </LinearLayout>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="Search"
-                    android:layout_alignParentRight="true"/>
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
