--- a/app/src/main/res/layout/activity_list_earn_points_menu.xml
+++ b/app/src/main/res/layout/activity_list_earn_points_menu.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -63,6 +64,8 @@
             app:tabGravity="fill"/>
     </android.support.design.widget.AppBarLayout>
 
+    <!-- Login progress -->
+    <include layout="@layout/widget_progressbar" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
