--- a/app/src/main/res/layout/listview_adapter_earnpoint.xml
+++ b/app/src/main/res/layout/listview_adapter_earnpoint.xml
@@ -36,6 +36,7 @@
         android:layout_toRightOf="@id/icon"
         android:ellipsize="marquee"
         android:singleLine="true"
+        android:layout_marginBottom="-5dp"
         android:text="0.02 km away"
         android:textSize="12sp" />
 
@@ -60,11 +61,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true">
         <Button
+            android:id="@+id/btn_promo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FEBGAJIAN"/>
 
         <Button
+            android:id="@+id/btn_shop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Shop Now"/>
